@@ -72,6 +72,12 @@ class BaseService extends PingService {
         return impl;
     }
 
+    _checkFailureLimit( as, info ) {
+        if ( info.stat_failures > this._failure_limit ) {
+            as.error( 'SecurityError', 'Failure limit has reached' );
+        }
+    }
+
     _loadCryptKey( as, id ) {
         this._storage.load( as, id );
 
@@ -80,10 +86,7 @@ class BaseService extends PingService {
                 as.error( 'NotApplicable' );
             }
 
-            if ( info.stat_failures > this._failure_limit ) {
-                as.error( 'SecurityError', 'Failure limit has reached' );
-            }
-
+            this._checkFailureLimit( as, info );
             as.success( info );
         } );
     }
@@ -96,6 +99,7 @@ class BaseService extends PingService {
                 as.error( 'NotApplicable' );
             }
 
+            this._checkFailureLimit( as, info );
             as.success( info );
         } );
     }
