@@ -1,3 +1,6 @@
 
+=== (next) ===
+FIXED: to check failure limit on sign/verify
+
 === 0.9.0 (2018-02-12) ===
 Initial version
